hero: add prop to use hal1 with whatsapp

--- a/ramdisk/init.samsungexynos8890.rc
+++ b/ramdisk/init.samsungexynos8890.rc
@@ -38,6 +38,8 @@ on init
 	#Google FRP solution
     symlink /dev/block/platform/155a0000.ufs/by-name/PERSISTENT /dev/block/persistent
 
+    setprop camera.hal1.packagelist "com.whatsapp"
+
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
 
