--- a/ramdisk/init.samsungexynos8890.rc
+++ b/ramdisk/init.samsungexynos8890.rc
@@ -439,6 +439,8 @@ on fs
     chown system media_rw /sys/class/lcd/panel/adaptive_control
     chown system media_rw /sys/class/lcd/panel/resolution
     chown system system /sys/class/lcd/panel/SVC_OCTA
+    chown system system /sys/class/lcd/panel/dpui
+    chown system system /sys/class/lcd/panel/dpui_dbg
 
 # Permissions for MDNIE
     chown system media_rw /sys/class/mdnie/mdnie/mode
@@ -450,6 +452,7 @@ on fs
     chown system system /sys/class/mdnie/mdnie/hdr
     chown system system /sys/class/mdnie/mdnie/night_mode
     chown system system /sys/class/mdnie/mdnie/whiteRGB
+    chown system system /sys/class/mdnie/mdnie/color_lens
     chmod 0660 /sys/class/mdnie/mdnie/lux
     chown system system /sys/class/mdnie/mdnie/lux
 
